2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemNarrowSpacePlugin.cpp:
	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h: Implement SetTime
	using NPN_RequestRead() if it's available on the stream
	(which it usually never is...) (Closes: #474841)

2008-02-20  Bastien Nocera  <hadess@hadess.net>

	* src/totem-fullscreen.c: (totem_fullscreen_finalize):
	Avoid warning on exit when we're fullscreen and
	exiting
	* src/totem.c: (totem_action_exit), (main): Fix _set_fullscreen
	being called multiple times on startup, fixes not being able 
	to get out of fullscreen on startup, and the next normal run
	showing up as maximised (Closes: #376149)

2008-02-20  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_can_play):
	Check for flupsdemux version, if it's installed, if it's
	not installed, fall-through as the missing-plugins will
	be triggered

2008-02-20  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c: (capture_interesting_frame):
	Add better debug

2008-02-20  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_open_with_subtitle):
	Patch from Peter Williams <peter@newton.cx> to fix icyx://
	playback

2008-02-20  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: For the DivX
	web player, force the viewer to open the file
	itself, as it would allow it to seek

2008-02-20  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/idl/totemIMullYPlayer.idl:
	Implement from documentation
	* browser-plugin/totemMullYPlugin.cpp:
	Implement stubs for the DivX Web Player Javascript
	interface (Closes: #354856)

	* browser-plugin/totemConePlugin.cpp:
	Fix warning

2008-02-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (main): Set up the recent files manager
	earlier, not after we try to add stuff to it when starting
	up with arguments...
