@@ -860,8 +860,6 @@ totemScriptablePlugin::GetTime(PRUint32 *_retval)
 {
   TOTEM_SCRIPTABLE_LOG_ACCESS ();
 
-  NS_ENSURE_STATE (IsValid ());
-
   *_retval = mPlugin->mTime;
   return NS_OK;
 }
@@ -870,16 +868,9 @@ totemScriptablePlugin::GetTime(PRUint32 *_retval)
 NS_IMETHODIMP
 totemScriptablePlugin::SetTime(PRUint32 time)
 {
-  NPByteRange byterange;
+  TOTEM_SCRIPTABLE_WARN_UNIMPLEMENTED();
 
-  TOTEM_SCRIPTABLE_LOG_ACCESS ();
-
-  NS_ENSURE_STATE (IsValid ());
-
-  if (mPlugin->mTime <= 0)
-    return NS_ERROR_NOT_AVAILABLE;
-
-  return mPlugin->RequestRead (time * mPlugin->mBytesLength / mPlugin->mTime);
+  return NS_OK;
 }
 
 /* unsigned long GetTimeScale (); */
