@@ -2,6 +2,13 @@
 
 	* browser-plugin/totemNarrowSpacePlugin.cpp:
 	* browser-plugin/totemPlugin.cpp:
+	* browser-plugin/totemPlugin.h:
+	Revert the previous commit, it's broken
+
+2008-02-21  Bastien Nocera  <hadess@hadess.net>
+
+	* browser-plugin/totemNarrowSpacePlugin.cpp:
+	* browser-plugin/totemPlugin.cpp:
 	* browser-plugin/totemPlugin.h: Implement SetTime
 	using NPN_RequestRead() if it's available on the stream
 	(which it usually never is...) (Closes: #474841)
